<resources>
    <string name="app_name">O.Park</string>
    <string name="app_sign_in">Sign In</string>
    <string name="app_register">Register</string>
    <string name="app_username_autocomplete">Username</string>
    <string name="app_password_edit_text">Password</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="confirm_profile_update">Update Profile</string>


    <!--//FACEBOOK STRING-->
    <string name="facebook_app_id">113991652589123</string>
    <string name="fb_login_protocol_scheme">fb113991652589123</string>


    <string name="error">Error</string>
    <string name="success">success</string>
    <string name="successfully_posted_post">successfully_posted_post</string>
    <string name="ok">Ok!</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_email">The email you entered is invalid</string>
    <string name="error_invalid_password">The password you entered does not satisfy requirements</string>
    <string name="email_registration">Email</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="name_registration">Name</string>
    <string name="name_and_number_text">You</string>
    <string name="your_car_text">Your Car</string>
    <string name="address_text">Your Address</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="contact_number_string">Contact Number</string>
    <string name="car_brand_string">Car Brand</string>
    <string name="car_colour_string">Car Colour</string>
    <string name="line_2_address_string">Line 2 Address</string>
    <string name="line_1_address_string">Line 1 Address</string>
    <string name="city_string">City</string>
    <string name="postcode_string">Postcode</string>
    <string name="state_county_string">State / County</string>
    <string name="profile_submit">Submit</string>
    <string name="car_plate_string">Car Plate</string>
    <string name="notyousignout">Sign out</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <!--Google Service API Key-->
    <string name="map_api_key">AIzaSyAGN1FMsVKJHTjnNOw_HpmJMx4CUVrhREY</string>
    <string name="title_activity_drawer_main">DrawerActivityMain</string>
    <string name="edit_profile_button">Edit Profile</string>

    <string name="share_parking">Share Parking</string>
    <string name="find_parking">Find Parking</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="feedback_prompt_text">How was your \nwhole experience?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="using_voucher_error">Our system detects you have a similar voucher that is in the redemption process with the merchant.\n Please contact merchant to complete the redemption before redeeming other similar vouchers</string>
    <string name="food_and_beverage_category">Food &amp; Beverage</string>
    <string name="health_and_beauty_category">Health &amp; Beauty</string>
    <string name="shopping_category">Shopping</string>
    <string name="services_category">Services</string>
    <string name="travel_category">Travel</string>
    <string name="entertainment_category">Entertainment</string>


</resources>