<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.opark.opark.RegisterActivity">




    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email_txtlay"
        android:layout_above="@id/reg_pass_txtlay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_registration"
            android:imeOptions="actionNext"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimaryDark"
            android:textIsSelectable="false"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_pass_txtlay"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/conf_reg_pass_txtlay"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <EditText
            android:ems="10"
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password_edit_text"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/conf_reg_pass_txtlay"
        android:layout_above="@id/register_sign_up_button"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:ems="10"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_text"
            android:imeActionId="@+id/register_form_finished"
            android:imeActionLabel="@string/error_invalid_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"

            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_layout_background"
        android:onClick="signUp"
        android:text="@string/app_register"
        />


</RelativeLayout>
