<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F79d7f"
              android:gravity="bottom|center_horizontal"
              android:orientation="vertical"
              tools:layout_editor_absoluteX="8dp"
              tools:layout_editor_absoluteY="1dp"
              android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="50dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/app_username_autocomplete"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_weight="0.06">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password_edittext"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="#F26141"
        android:layout_marginTop="50dp"
        android:text="@string/app_sign_in"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="#F26141"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="75dp"
        android:text="@string/app_register"/>

</LinearLayout>

