<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirm_profile_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_profile_update"
            />

    <!--============================================-->


        <!--===========================================-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/car_layout_update"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/name_num_layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <Button
                android:id="@+id/expand_name_button_update"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/name_and_number_text"/>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_first_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_first_name_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_last_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:el_duration="1000"
                app:el_expanded="false"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_last_name_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_phone_number_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_phone_num_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_number_string"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
            android:id="@+id/car_layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/address_layout_update"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/expand_car_button_update"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/your_car_text"/>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_car_colour_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_car_colour_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/car_colour_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_car_brand_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_car_brand_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/car_brand_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_car_model_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_car_model_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Car Model"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_car_plate_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_car_plate_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/car_plate_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/confirm_profile_update_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/expand_address_button_update"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/address_text"/>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_firstline_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_first_line_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/line_1_address_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_secondline_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:el_duration="1000"
                app:el_expanded="false"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_second_line_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/line_2_address_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_city_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_city_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_postcode_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_postcode_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postcode_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_countryState_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="1000"
                app:el_expanded="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_state_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state_county_string"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </android.support.design.widget.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>


        <!--================================================-->
    </RelativeLayout>

